# SmartCheckers

./: CMakeLists.txt  DominiGames.sln  LICENCE.md  README.md
.github/workflows/: cmake.yml  linux_builds.yml  macos-latest.yml  macos_builds.yml  ubuntu-latest.yml  window-latest.yml  windows-latest.yml  windows_builds.yml
DominiGames/: DominiGames.vcxproj  DominiGames.vcxproj.filters  al.cpp  blackpawn.cpp  cheesboard.cpp  cursor.cpp  gameboard.cpp  gameboard.h  main.cpp  player.cpp  player.h  truthvaluefield.cpp  whitepawn.cpp  whitepawn.h
include/: al.h  blackpawn.h  cheesboard.h  cursor.h  figure.h  truthvaluefield.h
src/: main.cpp
src/AbstractEntities/: truthvaluefield.cpp
src/Graphics/: blackpawn.cpp  cheesboard.cpp  cursor.cpp  figure.cpp  gameboard.cpp  whitepawn.cpp
src/Players/: al.cpp  player.cpp
